Added directives to support nodejs forwarding

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,21 +9,30 @@ http {
         least_conn;
         server node.cluster:3000 weight=10 max_fails=3 fail_timeout=30s;
     }
+
     server {
         listen [::]:80;
         listen 80;
         sendfile off;
         include  /etc/nginx/mime.types;
-        
+
         location / {
-            root /wwwroot;
-            try_files $uri $uri/index.html @proxy;
             client_max_body_size 2M;
+            root /wwwroot;
+            try_files $uri $uri/ /index.html;
         }
 
-        location @proxy {
+        location ~ ^/(api|socket\.io) {
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
+
             proxy_pass http://node-app;
             proxy_http_version 1.1;
+            
+            proxy_redirect off;
+
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
